<resources>
    <string name="app_name">AndroidRecipes</string>
    <string name="retrofit_get_all">GET ALL</string>
    <string name="retrofit_get_by_id">GET BY ID</string>
    <string name="retrofit_post">POST</string>
    <string name="retrofit_update">UPDATE</string>
    <string name="retrofit_delete">DELETE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
